Complete add-header feature

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
 	<title>Capstone II</title>
 </head>
 <body>
+	<!-- Header section -->
+	<nav id="header">
+		<!-- Content dynamically created -->
+	</nav>
+
 
 	<!-- Link to index.js -->
-	<script src="./index.js"></script>
+	<script src="./index.js" type="module"></script>
 </body>
 </html>
