Complete popup UI structure

--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,46 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Handlee">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Michroma">
 	<title>Capstone II</title>
 </head>
 <body>
 	<!-- Header section -->
-	<nav id="header">
+	<header id="header">
 		<!-- Content dynamically created -->
-	</nav>
+	</header>
 
-	<!-- <p id="ghyt" style="font-size: 5rem">&#128068;</p> -->
+	<!-- Comments popup section -->
+	<div class="" id="commentsPopup">
+		<!-- Content dynamically created -->
+		<h2 class="" id="exitCommentsPopup">X</h2>
+		<h2 id="cp-icon">&#128512;</h2>
+		<h2 id="cp-title">face with tongue</h2>
+
+		<div id="cp-attrDiv">
+			<p id="cp-attrDiv-categoryP" class="cp-attrDiv-node">category: smileys and people</p>
+			<p id="cp-attrDiv-groupP" class="cp-attrDiv-node">group: face positive</p>
+			<p id="cp-attrDiv-htmlCodeP" class="cp-attrDiv-node">htmlCode: &amp;#128512;</p>
+			<p id="cp-attrDiv-unicodeP" class="cp-attrDiv-node">unicode: U+1F600</p>
+		</div>
+
+		<div id="cp-commentsDiv">
+			<h3 id="cp-commentsDiv-title">Comments (2)</h3>
+
+			<div id="cp-commentsDiv-displayDiv">
+				<p>28/07/2022 Botlhale: Now this one, I like!</p>
+				<p>29/07/2022 Aziz: Yep, pretty awesome.</p>
+				<p>28/07/2022 Botlhale: Now this one, I like!</p>
+				<p>29/07/2022 Aziz: Yep, pretty awesome.</p>
+			</div>
+
+			<h4 id="cp-commentsDiv-addCommentTitle">Add comment</h4>
+			<input id="cp-nameInput" type="text" placeholder="Your name" aria-placeholder="Your name">
+			<textarea name="commentTA" id="cp-commentTA" cols="30" rows="10" placeholder="Your insights" aria-placeholder="Your insights"></textarea>
+			<button id="commentButton" type="button">Comment</button>
+		</div>
+	</div>
 
 	<!-- Footer section -->
 	<footer>
