--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,19 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Handlee">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Michroma">
-	<title>Capstone II</title>
+	<link rel="icon" href="./modules/artwork/world.jpg">
+	<title>Pixel🌎Planet</title>
 </head>
 <body>
 	<!-- Header section -->
 	<header id="header">
 		<!-- Content dynamically created -->
 	</header>
+
+	<!-- Main section -->
+	<main>
+		<!-- Content dynamically created -->
+	</main>
 
 	<!-- Comments popup section -->
 	<div class="" id="commentsPopup">
